# InfraSteward

./: .gitignore  README.MD  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vitest.config.ts
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  dependency-research.md  mcp-integration.md  script-manager.md  security.md  ssh-execution.md  storage-format.md  user-guide.md
mcp-server/: package.json
mcp-server/src/: registry.test.ts  registry.ts  server.ts
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/windows/nsis/: installer-hooks.nsh
src/components/: AddScriptsDialog.tsx  ConnectionSettings.tsx  LocalRunnerSettings.tsx  Modal.tsx  ScriptManager.tsx  ScriptSettings.tsx  WorkspaceParameters.tsx
src/lib/: appData.test.ts  appData.ts  backend.ts  command.test.ts  command.ts  ids.ts  mcp.test.ts  mcp.ts  parser.test.ts  parser.ts  types.ts  validation.ts  workspaceParameters.test.ts  workspaceParameters.ts
src/styles/: app.css
